--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "koa-compose": "^2.3.0",
     "debuglog": "^1.0.1"
   },
-  "peerDependencies": {
-    "koa": "^0.14.0"
-  },
   "devDependencies": {
+    "koa": "^0.14.0",
     "mocha": "^2.1.0",
     "should": "^4.4.2",
     "supertest": "^0.15.0"
