--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "koa-router",
+  "name": "siren-router",
   "description": "An express-style router middleware for koa.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TerenceZ/koa-router.git"
+    "url": "https://github.com/TerenceZ/siren-router.git"
   },
   "author": ["Alex Mingoia <talk@alexmingoia.com>", "TerenceZ <texvnars@gmail.com>"],
   "version": "1.0.1",
